<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarsDetail"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/safana"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbarsDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@color/abu_muda"
                android:scaleType="centerCrop"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Safana"
                android:fontFamily="@font/pacifico"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/img_item_view_detail"
                app:layout_constraintBottom_toBottomOf="@id/img_item_view_detail"
                app:layout_constraintEnd_toEndOf="@id/img_item_view_detail"
                app:layout_constraintStart_toStartOf="@id/img_item_view_detail"/>

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/img_item_view_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@color/transparant"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/txt_nama_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/img_item_view_detail"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/txt_detail_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_detail"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txt_nama_detail"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/btn_pesan_lewat_wa"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_detail"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/pesan_lewat_whatsapp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/shape_round_1_green"/>

            <Button
                android:id="@+id/btn_lihat_di_maps"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintTop_toBottomOf="@id/btn_pesan_lewat_wa"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/lihat_di_maps"
                android:textColor="@color/abu_tua"
                android:background="@drawable/shape_round_1_grey"
                />

            <View
                app:layout_constraintTop_toBottomOf="@id/btn_lihat_di_maps"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

        </android.support.constraint.ConstraintLayout>



    </ScrollView>

</android.support.constraint.ConstraintLayout>
