<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        >


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@color/abu_muda" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safana"
                android:fontFamily="@font/pacifico"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="@id/img_item_view"
                app:layout_constraintBottom_toBottomOf="@id/img_item_view"
                app:layout_constraintEnd_toEndOf="@id/img_item_view"
                app:layout_constraintStart_toStartOf="@id/img_item_view"/>

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/img_item_view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@color/transparant" />


            <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/img_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@color/black">

                <TextView
                    android:id="@+id/txt_nama_item"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/example_name"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_detail_item"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_nama_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/example_detail"
                    android:textSize="12sp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:layout_marginTop="6dp"/>

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>